--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "pm2:start": "pm2 start ecosystem.config.cjs",
+    "pm2:stop": "pm2 stop multilingual-ssr",
+    "pm2:restart": "pm2 restart multilingual-ssr",
+    "pm2:delete": "pm2 delete multilingual-ssr",
+    "pm2:logs": "pm2 logs multilingual-ssr",
+    "pm2:status": "pm2 status"
   },
   "dependencies": {
     "react": "19.2.0",
